# Surver

./: .env  Cargo.toml  README.md
migrations/2020-12-17-120939_table_creation/: down.sql  up.sql
migrations/2020-12-21-085245_insertions/: down.sql  up.sql
migrations/events/: down.sql  up.sql
migrations/questions/: down.sql  up.sql
migrations/users/: down.sql  up.sql
src/: api.rs  auth.rs  main.rs  models.rs  schema.rs
