[package]
name = "Surver"
version = "0.1.0"
authors = ["kdrahul"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-web = "3.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.11"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2", "numeric"] }
dotenv = "0.15.0"
futures = "0.3.7"
r2d2 = "0.8.9"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
