[package]
name = "actix-auth"
version = "0.1.0"
authors = ["kdrahul"]
edition = "2018"

[dependencies]
actix-web = "3.0.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-rt = "1.1.1"
#actix-service = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.5"
diesel = { version = "1.4.5", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.8"
r2d2 = "0.8.9"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
alcoholic_jwt = "1.0.0"
reqwest = "0.10.9"
actix-cors = "0.5.3"
