[package]
name = "actix-auth"
version = "0.1.0"
authors = ["kdrahul"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-web-httpauth = "0.5.0"
actix-rt = "1.1.1"
#actix-service = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.11"
diesel = { version = "1.4.5", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.8"
r2d2 = "0.8.9"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
actix-cors = "0.5.3"
jsonwebtoken = "7.2.0"
thiserror = "1.0.22"
alcoholic_jwt = "1.0.0"
